[project]
name = "pulumi-lambda-api"
version = "0.0.1"
description = "Random stuff to help writing Pulumi scripts easier"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">= 3.12.0"
dependencies = ["pulumi"]

[project.optional-dependencies]
dev = ["pyright", "ruff", "ward"]
aws = ["pulumi-aws"]

[project.urls]
"Source" = "https://github.com/duongdominhchau/pulumi-utils"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
